force-app/main/default/objects/Key_Metrics_Setting__mdt/Key_Metrics_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for configuring the Key Metrics LWC. The LWC sits on a Lightning Record Page and displays up to four key metrics in nicely displayed cards with dynamic rendering. As records are updated, metrics cards are updated in real time.</description>
    <label>Key Metrics Setting</label>
    <pluralLabel>Key Metrics Settings</pluralLabel>
</CustomObject>