force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Date_Weekday_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Weekday_Format__c</fullName>
    <description>Determines the length of the weekday values in dates being rendered, if at all</description>
    <inlineHelpText>For options, in order, will display the following: M, Mon, Monday. Visit http://sfdc.co/date-component for more details.</inlineHelpText>
    <label>Date Weekday Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>narrow</fullName>
            </value>
            <value>
                <fullName>short</fullName>
            </value>
            <value>
                <fullName>long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>