force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Date_Year_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Year_Format__c</fullName>
    <description>Determines the length of year values in dates being rendered</description>
    <inlineHelpText>&apos;numeric&apos; will display the entire year (e.g. 2024). Visit http://sfdc.co/date-component for more details.</inlineHelpText>
    <label>Date Year Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>numeric</fullName>
                <default>true</default>
                <label>numeric</label>
            </value>
            <value>
                <fullName>2-digit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>