force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Metric_1_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_API_Name__c</fullName>
    <description>API Name of the field on the object for metric 1</description>
    <label>Metric 1 API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>