force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Metric_1_Label__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_Label__c</fullName>
    <description>Label of the metric as you&apos;d like it displayed in the LWC</description>
    <label>Metric 1 Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>