force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Metric_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Metric_2_Label__c</fullName>
    <label>Metric 2 Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>