force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Metric_3_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_3_API_Name__c</fullName>
    <description>API Name of the field on the object for metric 3</description>
    <label>Metric 3 API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>