force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Metric_3_Format__c.field-meta.xml
<CustomField>
    <fullName>Metric_3_Format__c</fullName>
    <label>Metric 3 Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>decimal</fullName>
                <default>true</default>
                <label>decimal</label>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>