force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Metric_3_Label__c.field-meta.xml
<CustomField>
    <fullName>Metric_3_Label__c</fullName>
    <label>Metric 3 Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>