force-app/main/default/objects/Key_Metrics_Setting__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object API name of the record metrics</description>
    <inlineHelpText>If using a custom object, include the __c suffix. E.g. My_Custom_Object__c</inlineHelpText>
    <label>Object API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>